# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  chunked_request.txt  learn_python.py  webserv  webserv.conf
NGINX_testing/: .og_nginx.conf.swp  README.md  nginx.conf  vm42_nginx.conf
barebones_tester/: BarebonesTester.hpp  main.cpp
conf/: default.conf  extra.conf
conf/ko/: circular_redirect.conf  error.conf  no_location.conf  same_prefix.conf
conf/ok/: clean.conf  commented.conf  empty_location.conf  extensive.conf  extensive_conf.conf  minimalist.conf  minimalist_conf.conf  no_location.conf  redirections.conf  same_listen.conf
incl/: CgiHandler.hpp  CgiResponse.hpp  Config.hpp  ContentTypes.hpp  ErrorPageGenerator.hpp  Exceptions.hpp  HttpHeaders.hpp  Location.hpp  Log.hpp  Request.hpp  RequestParser.hpp  RequestProcessor.hpp  RequestUtils.hpp  ServerBlock.hpp  ServerEngine.hpp  SignalHandling.hpp  StatusCodes.hpp  Types.hpp  Utils.hpp  webserv.hpp
include/: Request.hpp
python_tester/: conftest.py  failed_tests_doc.txt  test_cgi.py  test_config.py  test_curl.py  test_malformed_requests.py  test_requests.py  test_webserv.py
python_tester/test_conf/bad/: asymmetric_scope_symbols1.conf  asymmetric_scope_symbols2.conf  bad_extension.txt  circular_redirect.conf  empty_loc.conf  error.conf  host_too_big.conf  invalid_path.conf  invalid_path1.conf  invalid_path2.conf  invalid_path3.conf  invalid_path4.conf  invalid_path5.conf  invalid_path6.conf  nasty_semicolons1.conf  nasty_semicolons2.conf  nasty_semicolons3.conf  nasty_semicolons4.conf  nested_sb.conf  no_client_body.conf  no_host.conf  no_location.conf  no_port copy.conf  no_root.conf  port_too_big.conf  wrapping1.conf  wrapping2.conf  wrapping3.conf  wrapping4.conf
python_tester/test_conf/good/: many_spaces.conf
sandbox/: Cgi.hpp  CgiHandler.hpp  PfdMeta.hpp  Request.hpp  Types.hpp  cgi.py  main.cpp  petra.md  test_strtok.cpp
sandbox/barebones_blocking/: dummy_socket_main.cpp
sandbox/epoll/: blueprint_main.cpp
sandbox/pages/: about.html  contact.html  delete.html  index.html  upload.html
sandbox/pages/css/: styles.css
sandbox/pages/error/: 403.html  404.html  405.html
scripts/: fetch_all.sh  get_remote_git_branches.sh
src/: CgiHandler.cpp  CgiHandler.hpp  CgiResponse.cpp  Config.cpp  Config.hpp  ConfigLocationUtils.cpp  ConfigServerUtils.cpp  ConfigUtils.cpp  ContentTypes.cpp  ErrorPageGenerator.cpp  Exceptions.cpp  HttpHeaderParsers.cpp  HttpHeaders.cpp  Location.cpp  Log.cpp  Request.cpp  Request.hpp  RequestParser.cpp  RequestProcessor.cpp  RequestProcessor.hpp  RequestUtils.cpp  RequestUtils.tpp  ServerBlock.cpp  ServerEngine.cpp  ServerEngine.hpp  StatusCodes.cpp  Types.cpp  Utils.cpp  Utils.hpp  blueprint_main.cpp  dummy_socket_main.cpp  main.cpp
test/: chunked_request_printf.txt  test_http.cpp  test_http_DELETE.cpp  test_http_GET.cpp  test_http_POST.cpp  test_http_helpers.hpp  test_utils.cpp
test_files/: greetings.txt
www/cgi-bin/: bad_status.py  calendar.php  cgi.py  gibberish_headers.py  hello.py  hello_non_zero.py  hello_query.py  hello_world.py  inifinite_sleep.py  johns_siege_test.py  post_test.py  redirect.py  secondary_contact_form.py  secondary_upload_form.php  secondary_upload_form.py  simple_html.php  sleep.py
www/html/: about.html  index.html
www/html/error/: 400.html
www/secondary/: about.html  calendar.html  contact.html  delete.html  index.html  success.html  upload.html  upload_done.html
www/three-socketeers/: about.html  contact.html  contact_new.html  delete.html  index.html  success.html  upload.html  upload_done.html
www/three-socketeers/css/: styles.css
www/three-socketeers/error/: 400.html  403.html  404.html  405.html  418.html
www/three-socketeers/uploads/: ola.txt_1742204081  test.txt
www/three-socketeers/uploads/alise/: hi.txt
